--- a/tree-assignment /src/main/resources/application.properties
+++ b/tree-assignment /src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=treeassignment
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/accountsdb
+spring.datasource.username=postgres
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+server.port=8000
